--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,22 @@ Title: Extreme Learning Machine library
 Version: 0.1
 Date: 2015-10-09
 Author: Ruben Urraca [aut],
-  Andres Sanz-Garcia [aut, cre],
+    Andres Sanz-Garcia [aut, cre],
 Maintainer: Andres Sanz <andres.sanz-garcia@helsinki.fi>
 Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
 LazyData: TRUE
-Imports: Rcpp (>= 0.12.1)
+Depends:
+    R(>= 3.0),
+    methods
+Imports:
+    Rcpp (>= 0.12.1)
 LinkingTo: Rcpp
-Suggests: testthat
+Suggests:
+    testthat
+Collate:
+    'AllClasses.R'
+    'AllGenerics.R'
+    'SLFNclass.R'
+    'ELMclass.R'
+    'RcppExports.R'
