--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,4 @@ exportClasses(SLFN)
 exportMethods(predict)
 exportMethods(show)
 exportMethods(train)
-importFrom(methods,setClass)
-importFrom(methods,setMethod)
+import(methods)
