--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,12 +24,14 @@ exportMethods(beta)
 exportMethods(bigdata)
 exportMethods(chekingDataModel)
 exportMethods(classification)
+exportMethods(error)
 exportMethods(inputs)
 exportMethods(loadSLFN)
 exportMethods(neurons)
 exportMethods(outputs)
 exportMethods(predict)
 exportMethods(project)
+exportMethods(rankNeurons)
 exportMethods(ranking)
 exportMethods(saveSLFN)
 exportMethods(show)
@@ -37,8 +39,10 @@ exportMethods(solveSystem)
 exportMethods(structureSelection)
 exportMethods(time)
 exportMethods(train)
+exportMethods(trainV)
 exportMethods(validation)
 exportMethods(weights_wc)
+import(lars)
 import(methods)
 importFrom(methods,setClass)
 importFrom(methods,setMethod)
