pruning issues corrected

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,7 @@ exportMethods(show)
 exportMethods(solveSystem)
 exportMethods(time)
 exportMethods(train)
-exportMethods(trainPrunning)
+exportMethods(trainPruning)
 exportMethods(validation)
 exportMethods(weights_wc)
 import(lars)
