document methods in the class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(checkingXY)
 export(loadSLFN)
 export(mse)
 export(project)
+export(prune)
 export(rankNeurons)
 export(saveSLFN)
 export(solveSystem)
