documentation of mse method updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(saveSLFN)
 export(solveSystem)
 export(train)
 export(trainELM)
+export(trainPruning)
 exportClasses(ELM)
 exportClasses(SLFN)
 exportMethods(predict)
