--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,14 +27,14 @@ Collate:
     'SLFNclass.R'
     'ELMclass.R'
     'RcppExports.R'
-    'addNeurons.R'
+    'add_neurons.R'
     'elm-package.R'
     'errors.R'
     'predict.R'
-    'pruning.R'
     'ranking.R'
     'saveload.R'
     'train.R'
+    'train_pruning.R'
     'utils.R'
     'wrapper.R'
 URL: https://github.com/mugiro/elm
