--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(train)
 export(train_pruning)
 exportClasses(ELM)
 exportClasses(SLFN)
+exportClasses(hiddenlayer)
 exportMethods(predict)
 exportMethods(show)
 import(lars)
